--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>eu.scasefp7.eclipseplugin</groupId>
-  <artifactId>eclipsecore</artifactId>
+  <groupId>eu.scasefp7.eclipse</groupId>
+  <artifactId>core</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modules>
