--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modules>
-    <module>eu.scasefp7.eclipsecore</module>
-    <module>eu.scasefp7.eclipsecore.test</module>
+    <module>eu.scasefp7.eclipse.core</module>
+    <module>eu.scasefp7.eclipse.core.test</module>
   </modules>
 
   <properties>
